[gd_scene load_steps=3 format=3 uid="uid://d1a2b3c4d5e6f"]

[ext_resource type="Script" path="res://main.gd" id="1_main_script"]
[ext_resource type="PackedScene" uid="uid://b8qk2x3p6e1wy" path="res://player.tscn" id="2_player"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main_script")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(360, 1100)
scale = Vector2(1.5, 1.5)

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 30.0
offset_top = 60.0
offset_right = 400.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 36
text = "Score: 0"

[node name="ShieldLabel" type="Label" parent="UI"]
offset_left = 30.0
offset_top = 110.0
offset_right = 400.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 36
text = "Bulbs: 0"

[node name="PremiumLabel" type="Label" parent="UI"]
offset_left = 30.0
offset_top = 160.0
offset_right = 600.0
offset_bottom = 210.0
theme_override_font_sizes/font_size = 32
text = "Premium: OFF"

[node name="StatusLabel" type="Label" parent="UI"]
offset_left = 30.0
offset_top = 210.0
offset_right = 400.0
offset_bottom = 250.0
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Connecting..."

[node name="LoadingLabel" type="Label" parent="UI"]
offset_left = 260.0
offset_top = 600.0
offset_right = 460.0
offset_bottom = 680.0
theme_override_font_sizes/font_size = 48
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
text = "Loading..."
horizontal_alignment = 1

[node name="StoreButton" type="Button" parent="UI"]
offset_left = 580.0
offset_top = 50.0
offset_right = 690.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 32
text = "Store"

[node name="GameOverLabel" type="Label" parent="UI"]
offset_left = 160.0
offset_top = 500.0
offset_right = 560.0
offset_bottom = 580.0
theme_override_font_sizes/font_size = 56
text = "GAME OVER"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI"]
offset_left = 210.0
offset_top = 600.0
offset_right = 510.0
offset_bottom = 680.0
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="StoreOverlay" type="ColorRect" parent="UI"]
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0, 0, 0, 0.85)

[node name="StorePanel" type="Panel" parent="UI"]
offset_left = 30.0
offset_top = 200.0
offset_right = 690.0
offset_bottom = 1080.0

[node name="PanelBg" type="ColorRect" parent="UI/StorePanel"]
offset_right = 660.0
offset_bottom = 880.0
color = Color(0.15, 0.15, 0.2, 1)

[node name="TitleLabel" type="Label" parent="UI/StorePanel"]
offset_left = 20.0
offset_top = 20.0
offset_right = 640.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 36
text = "Store"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="UI/StorePanel"]
offset_left = 590.0
offset_top = 15.0
offset_right = 650.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 24
text = "X"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/StorePanel"]
offset_left = 20.0
offset_top = 80.0
offset_right = 640.0
offset_bottom = 860.0
theme_override_constants/separation = 15

[node name="Buy10BulbsButton" type="Button" parent="UI/StorePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
theme_override_font_sizes/font_size = 22
text = "10 Bulbs"
text_overrun_behavior = 3
clip_text = true

[node name="Buy30BulbsButton" type="Button" parent="UI/StorePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
theme_override_font_sizes/font_size = 22
text = "30 Bulbs"
text_overrun_behavior = 3
clip_text = true

[node name="BuyPremiumButton" type="Button" parent="UI/StorePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
theme_override_font_sizes/font_size = 22
text = "Premium"
text_overrun_behavior = 3
clip_text = true

[node name="BuyPremiumYearButton" type="Button" parent="UI/StorePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
theme_override_font_sizes/font_size = 22
text = "Premium Year"
text_overrun_behavior = 3
clip_text = true

[node name="Separator" type="HSeparator" parent="UI/StorePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)

[node name="RestoreButton" type="Button" parent="UI/StorePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
theme_override_font_sizes/font_size = 22
text = "Restore Purchases"
text_overrun_behavior = 3
clip_text = true
